--- a/Assignment-1/code/style.css
+++ b/Assignment-1/code/style.css
@@ -1,1 +1,66 @@
 
+#root {
+    margin: 7px;
+}
+
+#top-container, #bottom-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-side, .right-side {
+    background: orange;
+    width: 45%;
+    height: 200px;
+
+}
+
+#middle-container {
+    background: rgb(250, 8, 49);
+    width: 100%;
+    height: 190px;
+    margin: 20px auto;
+}
+
+.box {
+    background: rgb(90, 95, 240);
+    width: 30%;
+    height: 190px;
+}
+
+@media screen and (max-width: 1024px) {
+    #bottom-container {
+        flex-direction: row;
+    }
+    
+}
+
+@media screen and (max_width: 760px) {
+    #bottom-container {
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .box {
+        width: 100%;
+        height: 150px;
+        margin-bottom: 5px;
+
+    }
+    
+}
+
+@media screen and (max-width: 320px) {
+    #top-container, #bottom-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .left-side, .box {
+        margin-bottom: 7px;
+    }
+    .left-side, .right-side, .box {
+        width: 100%;
+        height: 150px;
+    }
+}
