--- a/Assignment-2/code/my-app/src/App.css
+++ b/Assignment-2/code/my-app/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+/* 
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +33,35 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App {
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title h1 {
+  color: rgb(50, 206, 206);
+}
+
+.profile-content {
+  text-align: left;
+  margin: 10px;
+}
+
+
+
+.profile-content label {
+  font-size: 12px;
+  color: #323234;
+}
+
+.profile-content label, .profile-content strong {
+  display: block;
 }
